# django-audit-fields

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  CHANGES  MANIFEST.in  README.md  README.rst  _version.py  manage.py  mypy.ini  pyproject.toml  requirements.tests.txt  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml
django_audit_fields/: __init__.py  admin.py  constants.py  settings.py  wsgi.py
django_audit_fields/fields/: __init__.py  hostname_modification_field.py  userfield.py  uuid_auto_field.py
django_audit_fields/models/: audit_model_mixin.py  audit_uuid_model_mixin.py
django_audit_fields/tests/: models.py  test_fields.py
docs/: conf.py  index.rst
src/django_audit_fields/: __init__.py  admin.py  apps.py  constants.py  stubs.py  utils.py
src/django_audit_fields/fields/: __init__.py  hostname_modification_field.py  userfield.py  uuid_auto_field.py
src/django_audit_fields/locale/sw/LC_MESSAGES/: django.po
src/django_audit_fields/models/: __init__.py  audit_model_mixin.py  audit_uuid_model_mixin.py
src/django_audit_fields/tests/: models.py
tests/: models.py  test_settings.py
tests/tests/: test_fields.py
