[metadata]
name = django-audit-fields
version = attr: _version
author = Erik van Widenfelt
author_email = ew2789@gmail.com
url = http://github.com/erikvw/django-audit-fields
license = GPL license, see LICENSE
description = Add model fields to track creation and modification dates, users and more on save.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = django Edc audit field clinicedc, clinical trials
classifiers=
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)


[options]
python_requires = >=3.8
zip_safe = False
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    bin*
    django_audit_fields.tests*

[flake8]
ignore = E226,W503,E203
max-line-length = 95
max-complexity = 10
exclude = */migrations,.tox,.git,__pycache__,build,dist,.eggs
per-file-ignores = __init__.py: F401
